--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,9 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+        androidExtensions {
+            experimental = true
+        }
     buildTypes {
         release {
             minifyEnabled false
@@ -58,5 +61,11 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
+    //Glide library
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    //Material Design library
+    implementation 'com.google.android.material:material:1.2.1'
 
 }
